Make some general gateway properties configurable (#59)
